[SYNCOPE-978] REST resource provided, consolidated wssample into syncope-fit-build-tools